# whisperx-api

./: .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: docker-image.yml
openspec/: config.yaml
openspec/changes/archive/2026-06-09-improve-diarization-quality/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-09-improve-diarization-quality/specs/diarization/: spec.md
openspec/changes/archive/2026-06-10-configurable-fill-nearest/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-10-configurable-fill-nearest/specs/diarization/: spec.md
openspec/changes/archive/2026-06-10-restore-segment-level-diarization/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-10-restore-segment-level-diarization/specs/diarization/: spec.md
openspec/specs/diarization/: spec.md
src/whisperx_api/: config.py  health_router.py  main.py  models_router.py  state.py  transcribe_router.py
