[project]
name = "whisper"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.128.1",
    "pyannote-audio>=3.4.0",
    "python-multipart>=0.0.22",
    "uvicorn>=0.40.0",
    "whisperx>=3.7.6",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
]
