[project]
name = "whisper"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.128.1",
    "pyannote-audio>=3.4.0",
    "python-multipart>=0.0.22",
    "uvicorn>=0.40.0",
    "whisperx>=3.8.2",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",

    #приходится явно задавать. Транзитивно от whisper torch==2.8, 
    #а torchcodec транзитивно 0.10, а нужен 0.7 для 2.8 https://github.com/meta-pytorch/torchcodec
    "torch==2.8.*",
    "torchcodec==0.7.*",
]
